Added skeleton of text_detection_subscriber node

--- a/unitree_ocr/CMakeLists.txt
+++ b/unitree_ocr/CMakeLists.txt
@@ -7,6 +7,25 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(sensor_msgs REQUIRED)
+find_package(OpenCV REQUIRED)
+find_package(cv_bridge REQUIRED)
+
+include_directories(SYSTEM 
+  ${OpenCV_INCLUDE_DIRS}
+)
+
+add_executable(text_detection_subscriber src/text_detection_subscriber.cpp)
+ament_target_dependencies(text_detection_subscriber
+  rclcpp std_msgs sensor_msgs cv_bridge
+)
+target_link_libraries(text_detection_subscriber ${OpenCV_LIBRARIES})
+
+install(TARGETS
+  text_detection_subscriber
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 install(DIRECTORY
   launch models
