--- a/unitree_ocr/package.xml
+++ b/unitree_ocr/package.xml
@@ -7,6 +7,11 @@
   <maintainer email="ngmorales97@gmail.com">ngm</maintainer>
   <license>TODO: License declaration</license>
 
+  <depend>rclcpp</depend>
+  <depend>sensor_msgs</depend>
+  <depend>OpenCV</depend>
+  <depend>cv_bridge</depend>
+
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <test_depend>ament_lint_auto</test_depend>
