--- a/unitree_ocr/package.xml
+++ b/unitree_ocr/package.xml
@@ -3,14 +3,15 @@
 <package format="3">
   <name>unitree_ocr</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
+  <description>OCR using EAST and the Unitree Go1's cameras.</description>
   <maintainer email="ngmorales97@gmail.com">ngm</maintainer>
-  <license>TODO: License declaration</license>
+  <license>Apache License 2.0</license>
 
   <depend>rclcpp</depend>
   <depend>sensor_msgs</depend>
   <depend>OpenCV</depend>
   <depend>cv_bridge</depend>
+  <depend>image_transport</depend>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
