Skeleton of a sandbox testing node

--- a/unitree_inspection/CMakeLists.txt
+++ b/unitree_inspection/CMakeLists.txt
@@ -7,10 +7,23 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(rclcpp REQUIRED)
 find_package(unitree_nav_interfaces REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+
+install(DIRECTORY
+  launch
+  DESTINATION share/${PROJECT_NAME}
+)
+
+add_executable(sandbox src/sandbox.cpp)
+ament_target_dependencies(sandbox
+  rclcpp unitree_nav_interfaces
+)
+
+install(TARGETS
+  sandbox
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
