--- a/unitree_ocr_interfaces/package.xml
+++ b/unitree_ocr_interfaces/package.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>unitree_ocr</name>
+  <name>unitree_ocr_interfaces</name>
   <version>0.0.0</version>
-  <description>OCR using EAST and the Unitree Go1's cameras.</description>
+  <description>Interfaces for OCR on the Unitree Go1.</description>
   <maintainer email="ngmorales97@gmail.com">Nick Morales</maintainer>
   <license>Apache License 2.0</license>
 
-  <depend>rclcpp</depend>
-  <depend>sensor_msgs</depend>
-  <depend>OpenCV</depend>
-  <depend>cv_bridge</depend>
-  <depend>image_transport</depend>
-  <depend>unitree_ocr_interfaces</depend>
-
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
+
+  <build_depend>rosidl_default_generators</build_depend>
+  <exec_depend>rosidl_default_runtime</exec_depend>
+
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <member_of_group>rosidl_interface_packages</member_of_group>
 
   <export>
     <build_type>ament_cmake</build_type>
