--- a/unitree_inspection/package.xml
+++ b/unitree_inspection/package.xml
@@ -10,6 +10,7 @@
   <depend>rclcpp</depend>
   <depend>std_srvs</depend>
   <depend>unitree_nav_interfaces</depend>
+  <depend>unitree_ocr_interfaces</depend>
 
   <exec_depend>unitree_nav</exec_depend>
   <exec_depend>unitree_ocr</exec_depend>
