--- a/unitree_inspection/config/environment_params.yaml
+++ b/unitree_inspection/config/environment_params.yaml
@@ -1,7 +1,7 @@
 /**:
   ros__parameters:
     inspection_points:
-      text:   [ "100",    "200",    "300",    "400",    "500",    "600",]
-      x:      [ 0.0,      0.5,      0.0,      -0.64,    0.0,      0.0,]
-      y:      [ 0.0,      -1.5,     0.0,      0.7,      0.0,      0.0,]
-      theta:  [ 0.0,      -1.57,    0.0,      2.093,    0.0,      0.0,]
+      text:   [ "100",    "200",    "300",    "400",]
+      x:      [ 0.0,      -0.049,   0.0,      -0.64,]
+      y:      [ 0.0,      0.427,    0.0,      0.7,  ]
+      theta:  [ 0.0,      2.372,    0.0,      2.093,]
