--- a/unitree_inspection_interfaces/package.xml
+++ b/unitree_inspection_interfaces/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>unitree_ocr_interfaces</name>
+  <name>unitree_inspection_interfaces</name>
   <version>0.0.0</version>
-  <description>Interfaces for OCR on the Unitree Go1.</description>
+  <description>Interfaces for autonomous inspection with the Unitree Go1.</description>
   <maintainer email="ngmorales97@gmail.com">Nick Morales</maintainer>
   <license>Apache License 2.0</license>
 
