--- a/unitree_inspection/config/environment_params.yaml
+++ b/unitree_inspection/config/environment_params.yaml
@@ -1,7 +1,7 @@
 /**:
   ros__parameters:
     inspection_points:
-      text:   [ "100",    "200",    "300",    "400",]
-      x:      [  0.407,   -0.080,    0.373,    2.003,]
-      y:      [  1.330,    0.251,   -1.410,   -1.296,]
-      theta:  [  0.048,    2.372,   -0.631,   -1.050,]
+      text:   [ "000",    "100",    "200",    "300",    "400",]
+      x:      [  0.000,    0.407,   -0.080,    0.373,    2.003,]
+      y:      [  0.000,    1.330,    0.251,   -1.410,   -1.296,]
+      theta:  [  0.000,    0.048,    2.372,   -0.631,   -1.050,]
