Renamed sandbox node to inspection

--- a/unitree_inspection/CMakeLists.txt
+++ b/unitree_inspection/CMakeLists.txt
@@ -18,14 +18,14 @@ find_package(unitree_nav_interfaces REQUIRED)
 find_package(unitree_ocr_interfaces REQUIRED)
 find_package(unitree_inspection_interfaces REQUIRED)
 
-add_executable(sandbox src/sandbox.cpp)
-ament_target_dependencies(sandbox
+add_executable(inspection src/inspection.cpp)
+ament_target_dependencies(inspection
   rclcpp rclcpp_action std_srvs geometry_msgs tf2 tf2_geometry_msgs nav2_msgs
   unitree_nav_interfaces unitree_ocr_interfaces unitree_inspection_interfaces
 )
 
 install(TARGETS
-  sandbox
+  inspection
   DESTINATION lib/${PROJECT_NAME}
 )
 
